// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/sidebar_channel should match snapshot 1`] = `
<div>
  <li
    class="SidebarChannel expanded"
    role="listitem"
  >
    <a
      aria-label="channel_display_name public channel"
      class="SidebarLink"
      href="/team_name/channels/"
      id="sidebarItem_"
      tabindex="0"
    >
      <i
        class="icon icon-globe"
      />
      <div
        class="SidebarChannelLinkLabel_wrapper"
      >
        <span
          class="SidebarChannelLinkLabel"
        >
          channel_display_name
        </span>
      </div>
      <div
        class="SidebarMenu MenuWrapper"
      >
        <button
          aria-controls="SidebarChannelMenu-MenuList-channel_id"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Channel options for "
          class="SidebarMenu_menuButton"
          id="SidebarChannelMenu-Button-channel_id"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            />
          </svg>
        </button>
      </div>
    </a>
  </li>
</div>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when DM channel 1`] = `
<div>
  <li
    class="SidebarChannel expanded"
    role="listitem"
  >
    <div>
      Direct Channel
    </div>
  </li>
</div>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when GM channel 1`] = `
<div>
  <li
    class="SidebarChannel expanded"
    role="listitem"
  >
    <div>
      Group Channel
    </div>
  </li>
</div>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when active 1`] = `
<div>
  <li
    class="SidebarChannel expanded active"
    role="listitem"
  >
    <a
      aria-label="channel_display_name public channel"
      class="SidebarLink"
      href="/team_name/channels/"
      id="sidebarItem_"
      tabindex="0"
    >
      <i
        class="icon icon-globe"
      />
      <div
        class="SidebarChannelLinkLabel_wrapper"
      >
        <span
          class="SidebarChannelLinkLabel"
        >
          channel_display_name
        </span>
      </div>
      <div
        class="SidebarMenu MenuWrapper"
      >
        <button
          aria-controls="SidebarChannelMenu-MenuList-channel_id"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Channel options for "
          class="SidebarMenu_menuButton"
          id="SidebarChannelMenu-Button-channel_id"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            />
          </svg>
        </button>
      </div>
    </a>
  </li>
</div>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when collapsed 1`] = `
<div>
  <li
    class="SidebarChannel collapsed"
    role="listitem"
  >
    <a
      aria-label="channel_display_name public channel"
      class="SidebarLink"
      href="/team_name/channels/"
      id="sidebarItem_"
      tabindex="0"
    >
      <i
        class="icon icon-globe"
      />
      <div
        class="SidebarChannelLinkLabel_wrapper"
      >
        <span
          class="SidebarChannelLinkLabel"
        >
          channel_display_name
        </span>
      </div>
      <div
        class="SidebarMenu MenuWrapper"
      >
        <button
          aria-controls="SidebarChannelMenu-MenuList-channel_id"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Channel options for "
          class="SidebarMenu_menuButton"
          id="SidebarChannelMenu-Button-channel_id"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            />
          </svg>
        </button>
      </div>
    </a>
  </li>
</div>
`;

exports[`components/sidebar/sidebar_channel should match snapshot when unread 1`] = `
<div>
  <li
    class="SidebarChannel expanded unread"
    role="listitem"
  >
    <a
      aria-label="channel_display_name public channel"
      class="SidebarLink"
      href="/team_name/channels/"
      id="sidebarItem_"
      tabindex="0"
    >
      <i
        class="icon icon-globe"
      />
      <div
        class="SidebarChannelLinkLabel_wrapper"
      >
        <span
          class="SidebarChannelLinkLabel"
        >
          channel_display_name
        </span>
      </div>
      <div
        class="SidebarMenu MenuWrapper"
      >
        <button
          aria-controls="SidebarChannelMenu-MenuList-channel_id"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Channel options for "
          class="SidebarMenu_menuButton"
          id="SidebarChannelMenu-Button-channel_id"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
            />
          </svg>
        </button>
      </div>
    </a>
  </li>
</div>
`;
